--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
-    "express": "^4.13.4",
     "lodash": "^3.10.1",
     "mkdirp": "^0.5.1",
     "multer": "^0.1.8",
@@ -68,5 +67,9 @@
   "engines": {
     "node": ">=0.10.36",
     "npm": ">=2.0"
+  },
+  "peerDependencies": {
+    "express": "4.x"
   }
+}
 }
