--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "multer": "^0.1.8",
     "ono": "^1.0.22",
     "swagger-methods": "^1.0.0",
-    "swagger-mock-parser": "^1.0.6",
+    "swagger-mock-parser": "~1.0",
     "swagger-parser": ">=3.0.0-alpha.8",
     "tmp": "0.0.27",
     "tv4": "^1.2.5",
