--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger-express-middleware-with-chance",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Swagger middleware and use chancejs mocks for Express",
   "keywords": [
     "express",
@@ -59,7 +59,7 @@
     "ono": "^1.0.22",
     "swagger-methods": "^1.0.0",
     "swagger-mock-parser": "~1.1",
-    "swagger-parser": "git://github.com/whq731/swagger-parser#releases\/4.0.0",
+    "swagger-jsblade-swagger-parser": "4.0.0-beta.2",
     "tmp": "0.0.27",
     "tv4": "^1.2.5",
     "type-is": "^1.6.8"
